--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react": "^16.12.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
